--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -44,9 +44,9 @@ a {
   outline: none;
   display: inline-block;
   text-decoration: none;
-  background: #fcca2f;
+  background: #2196F3;
   font-size: 14px;
-  color: steelblue;
+  color: white;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.25);
   -webkit-transition: all ease .3s;
           transition: all ease .3s;
@@ -174,7 +174,7 @@ nav li:nth-child(2n+1) a:after {
   }
 
   a {
-    box-shadow: 0 8px #f4ba04;
+    box-shadow: 0 8px #0D47A1;
   }
 
   nav a {
