--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,7 +4,7 @@
 body {
   background: #FDD761;
   font-family: 'Raleway', 'Arial', serif;
-  color: white;
+  color: black;
 }
 
 h1, h3, h4, header .btn {
@@ -46,7 +46,7 @@ a {
   text-decoration: none;
   background: #2196F3;
   font-size: 14px;
-  color: white;
+  color: black;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.25);
   -webkit-transition: all ease .3s;
           transition: all ease .3s;
