--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,9 +2,9 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 body {
-  background: #FDD761;
+  background: #2196F3;
   font-family: 'Raleway', 'Arial', serif;
-  color: black;
+  color: #fff;
 }
 
 h1, h3, h4, header .btn {
@@ -14,7 +14,7 @@ h1, h3, h4, header .btn {
 h1 {
   margin: 100px 0 20px;
   text-transform: uppercase;
-  font-size: 2.6rem;
+  font-size: 5rem;
 }
 
 h3 {
@@ -45,16 +45,16 @@ a {
   display: inline-block;
   text-decoration: none;
   background: #2196F3;
-  font-size: 14px;
-  color: black;
-  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.25);
+  font-size: 20px;
+  color: #fff;
+  text-shadow: 0px 5px 2px rgba(0, 0, 0, 0.25);
   -webkit-transition: all ease .3s;
           transition: all ease .3s;
 }
 
 .btn {
   font-size: 1.2em;
-  border-radius: 5px;
+  border-radius: 8px;
   padding: 12px 30px;
 }
 
@@ -135,7 +135,7 @@ nav li:nth-child(2n+1) a:after {
 
 .services a {
   padding: 25px;
-  background: #fafafa;
+  background: #0D47A1;
   margin-top: 20px;
   border-radius: 4px;
 }
@@ -160,10 +160,6 @@ nav li:nth-child(2n+1) a:after {
 
 
 
-
-
-
-
 /* MEDIA QUERIES STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
@@ -178,9 +174,9 @@ nav li:nth-child(2n+1) a:after {
   }
 
   nav a {
-    padding: 7px;
-    border-right: 1px solid #fabd03;
-    width: 80px;
+    padding: 10px;
+    border-right: 2px dashed #0D47A1;
+    width: 100px;
   }
 
   nav li:nth-child(2n+1) a:after {
