--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,26 @@ h1, h3, h4, header .btn {
   font-weight: bold;
 }
 
-h1 {
-  margin: 200px 0 20px;
+
+
+.titulo {
+  margin: 230px 0 20px;
   text-transform: uppercase;
   font-size: 5rem;
+  text-shadow: 0px 5px 8px #000; 
+}
+.titulo-casas {
+  text-transform: uppercase;
+  font-size: 3.5rem;
+  text-shadow: 0px 5px 8px #000; 
+  margin-bottom: 25px;
+
+}
+
+h1 {
+  font-size: 4rem;
+  text-align: center;
+  margin-top: 40px;
 }
 
 h3 {
@@ -35,9 +51,6 @@ h3:after {
   border-bottom: 3px solid whitesmoke;
 }
 
-h1 + h4 {
-  font-weight: normal;
-}
 
 a {
   text-align: center;
@@ -69,23 +82,19 @@ a {
 /* HEADER STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-header .btn {
-  text-transform: uppercase;
-}
+
 header a:hover, .about a:hover {
-  background: #fcc316;
+  background: #2196F3;
 }
 
-header .btn, .services {
-  margin-top: 100px;
-}
+
 header a:hover, .about a:hover {
   background: #fcc316;
 }
 
 
 header {
-  padding: 100px 0 350px;
+  padding: 80px 0 350px;
 }
 
 
@@ -151,8 +160,8 @@ nav li:nth-child(2n+1) a:after {
 
 
 .fundo-liso {
-
-  background: black no-repeat fixed center ;
+  border-top: solid 5px #0D47A1;
+  background: #2196F3 no-repeat fixed center ;
   text-align: center;
 }
 
@@ -211,18 +220,6 @@ nav li:nth-child(2n+1) a:after {
 
 
 @media (min-width: 750px) {
-
-  h1 {
-    font-size: 3.5rem;
-  }
-
-  h3 {
-    font-size: 2.8rem;
-  }
-
-  h4 {
-    font-size: 2.4rem;
-  }
 
   .services a:hover {
     box-shadow: 0 -8px white;
