--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ h1, h3, h4, header .btn {
   font-size: 3.5rem;
   text-shadow: 0px 5px 8px #000; 
   margin-bottom: 25px;
-
+	margin-top: 80px;
 }
 
 h1 {
@@ -98,7 +98,7 @@ header {
 
 
 header {
-  background: url(../img/bg.jpg) no-repeat fixed center / cover;
+  background: url(../img/background.jpg) no-repeat fixed center / cover;
   text-align: center;
 }
 
@@ -147,18 +147,39 @@ nav li:nth-child(2n+1) a:after {
   background: #0D47A1;
   margin-top: 30px;
   border-radius: 20px;
+
 }
 
 .casas p {
   margin: 15px 0 0;
 }
 
+.casas {
 
+	margin-bottom: 80px;	
+}
 .fundo-liso {
   border-top: solid 5px #0D47A1;
   background: #2196F3 no-repeat fixed center ;
   text-align: center;
 }
+
+
+.rodape {
+	
+	border-top: solid 5px #fff;
+	border-bottom: solid 5px #0D47A1;
+	margin-top: 20px;
+	background: #0D47A1;
+	
+}
+.rodape h2 {
+
+	margin: 20px;
+	font-size:50px;
+	color: #fff;
+}
+
 
 /* MEDIA QUERIES STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
