--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,24 @@
 /* GENERAL STYLES
+
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.fundo-liso {	
+
+
+	background-image: linear-gradient(135deg, transparent, 
+                                        transparent 14px, 
+                                        rgba(0, 0, 0, 0.5) 16px,
+                                        rgba(0, 0, 0, 0.5) 16px, 
+                                        transparent 15px,
+                                        transparent);
+	background-size: 30px 30px;
+
+}
+
 
 body {
   background: #2196F3;
-  font-family: 'Raleway', 'Arial', serif;
+  font-family: 'Arial', serif;
   color: #fff;
 }
 
@@ -18,7 +33,7 @@ h1, h3, h4, header .btn {
   font-size: 5rem;
   text-shadow: 0px 5px 8px #000; 
 }
-.titulo-casas {
+.titulo-ajuda {
   text-transform: uppercase;
   font-size: 3.5rem;
   text-shadow: 0px 5px 8px #000; 
@@ -98,7 +113,7 @@ header {
 
 
 header {
-  background: url(../img/background.jpg) no-repeat fixed center / cover;
+  background: url(../img/bg1.jpg) no-repeat fixed center / cover;
   text-align: center;
 }
 
@@ -142,42 +157,39 @@ nav li:nth-child(2n+1) a:after {
 /* SERVICES STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-.casas a {
+.tipo-ajuda a {
   padding: 30px;
-  background: #0D47A1;
+  background: #2196F3;
   margin-top: 30px;
   border-radius: 20px;
 
 }
 
-.casas p {
+.tipo-ajuda p {
   margin: 15px 0 0;
 }
 
-.casas {
 
-	margin-bottom: 80px;	
-}
 .fundo-liso {
-  border-top: solid 5px #0D47A1;
-  background: #2196F3 no-repeat fixed center ;
+  border-top: solid 5px #2196F3;
+  background: #0D47A1 no-repeat fixed center ;
   text-align: center;
 }
 
 
 .rodape {
 	
-	border-top: solid 5px #fff;
+	border-top: solid 5px #2196F3;
 	border-bottom: solid 5px #0D47A1;
-	margin-top: 20px;
 	background: #0D47A1;
 	
 }
-.rodape h2 {
+.h2-rodape {
 
 	margin: 20px;
 	font-size:50px;
 	color: #fff;
+	text-align: center;
 }
 
 
@@ -231,7 +243,7 @@ nav li:nth-child(2n+1) a:after {
 
 @media (min-width: 750px) {
 
-  .casas a:hover {
+  .tipo-ajuda a:hover {
     background: #fcc316;
     box-shadow: 0 8px #d19d00;
     -webkit-transform: scale(1.05);
