--- a/css/styles.css
+++ b/css/styles.css
@@ -3,16 +3,24 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .fundo-liso {	
+	
 
+	background: #0D47A1;
+	border-top: solid 5px white;
+  
+  text-align: center;
 
+	margin-bottom: 50px;
+
+	border-top: .5em solid #000;
 	background-image: linear-gradient(135deg, transparent, 
-                                        transparent 14px, 
-                                        rgba(0, 0, 0, 0.5) 16px,
-                                        rgba(0, 0, 0, 0.5) 16px, 
-                                        transparent 15px,
-                                        transparent);
-	background-size: 30px 30px;
-
+		                                  transparent 14px, 
+		                                  rgba(0, 0, 0, 0.5) 16px,
+		                                  rgba(0, 0, 0, 0.5) 16px, 
+		                                  transparent 15px,
+		                                  transparent);
+	background-size: 20px 20px;
+	background-attachment: fixed;
 }
 
 
@@ -167,13 +175,6 @@ nav li:nth-child(2n+1) a:after {
 
 .tipo-ajuda p {
   margin: 15px 0 0;
-}
-
-
-.fundo-liso {
-  border-top: solid 5px #2196F3;
-  background: #0D47A1 no-repeat fixed center ;
-  text-align: center;
 }
 
 
