--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,7 @@
   
   text-align: center;
 
-	margin-bottom: 50px;
-
-	border-top: .5em solid #000;
+	
 	background-image: linear-gradient(135deg, transparent, 
 		                                  transparent 14px, 
 		                                  rgba(0, 0, 0, 0.5) 16px,
@@ -21,6 +19,8 @@
 		                                  transparent);
 	background-size: 20px 20px;
 	background-attachment: fixed;
+
+
 }
 
 
@@ -166,32 +166,25 @@ nav li:nth-child(2n+1) a:after {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .tipo-ajuda a {
-  padding: 30px;
+  padding: 20px;
   background: #2196F3;
-  margin-top: 30px;
+  margin-top: 10px;
+  
+   
   border-radius: 20px;
 
 }
+.tipo-ajuda a:last-child {
+
+  margin-bottom: 50px;
+}
+
+
 
 .tipo-ajuda p {
   margin: 15px 0 0;
 }
 
-
-.rodape {
-	
-	border-top: solid 5px #2196F3;
-	border-bottom: solid 5px #0D47A1;
-	background: #0D47A1;
-	
-}
-.h2-rodape {
-
-	margin: 20px;
-	font-size:50px;
-	color: #fff;
-	text-align: center;
-}
 
 
 /* MEDIA QUERIES STYLES
@@ -239,7 +232,6 @@ nav li:nth-child(2n+1) a:after {
   }
 
 }
-
 
 
 @media (min-width: 750px) {
