--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@
 	background-size: 20px 20px;
 	background-attachment: fixed;
 
-
+  
 }
 
 
@@ -172,6 +172,7 @@ nav li:nth-child(2n+1) a:after {
   flex-direction: row;
 
   justify-content: space-around;
+  margin-bottom: 100px;
 
 }
 
@@ -181,6 +182,7 @@ nav li:nth-child(2n+1) a:after {
   background: #2196F3;
   margin-top: 10px;
   border-radius: 20px;
+  height: 200px;
 
 }
 .tipo-ajuda a {
@@ -193,6 +195,12 @@ nav li:nth-child(2n+1) a:after {
 }
 
 
+.ajuda-botao img{
+
+  margin-top: 30px;
+  width: 100px;
+  height: 100px;
+}
 
 .rodape {
 	
