--- a/css/banner.css
+++ b/css/banner.css
@@ -2,15 +2,15 @@
 header {
   background: url(../img/bg1.jpg) no-repeat fixed center / cover;
   text-align: center;
-  font-family: 'Arial', serif;
+  font-family: 'Alegreya Sans', sans-serif;
+
   color: #fff;
-  font-weight: bold;
   padding: 80px 0 350px;
 }
+
 .titulo {
   margin: 230px 0 20px;
-  text-transform: uppercase;
-  font-size: 5rem;
-  text-shadow: 0px 5px 8px #000; 
+  font-size: 8rem;
+  text-shadow: 0px 4px 15px #0c0c0c; 
 }
 
