--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,9 @@
 .rodape {
 	
 	border-top: solid 5px #fff;
-	border-bottom: solid 5px #0D47A1;
+	border-bottom: solid 5px #4ABDAC;
 	margin-top: 20px;
-	background: #0D47A1;
+	background: #4ABDAC;
 	
 }
 .rodape h2 {
