--- a/css/navigation-menu.css
+++ b/css/navigation-menu.css
@@ -4,7 +4,7 @@ a {
   outline: none;
   display: inline-block;
   text-decoration: none;
-  background: #2196F3;
+  background: #4ABDAC;
   font-size: 20px;
   color: #fff;
   text-shadow: 0px 5px 2px rgba(0, 0, 0, 0.25);
@@ -13,8 +13,9 @@ a {
 }
 
 header a:hover, .about a:hover {
-  background: #fcc316;
+  background: #F7B733;
 }
+
 
 nav a {
   position: relative;
@@ -57,8 +58,13 @@ nav li:nth-child(2n+1) a:after {
   }
 
   a {
-    box-shadow: 0 8px #0D47A1;
+    box-shadow: 0 8px rgb(42, 119, 108);
   }
+
+  header a:hover, .about a:hover {
+    box-shadow: 0 8px rgb(180, 133, 38);
+  }
+  
 
   nav a {
     padding: 10px;
@@ -74,8 +80,5 @@ nav li:nth-child(2n+1) a:after {
     border-right: none;
   }
 
-  header a:hover, .about a:hover {
-    box-shadow: 0 8px #d19d00;
-  }
-
+ 
 }
