--- a/css/banner.css
+++ b/css/banner.css
@@ -1,16 +1,21 @@
 
 header {
-  background: url(../img/bg1.jpg) no-repeat fixed center / cover;
+  background: url(../img/gray-cover.png) no-repeat fixed center / cover;
   text-align: center;
-  font-family: 'Alegreya Sans', sans-serif;
-
+  font-family: 'Open Sans', sans-serif;
   color: #fff;
   padding: 80px 0 350px;
 }
 
 .titulo {
   margin: 230px 0 20px;
-  font-size: 8rem;
-  text-shadow: 0px 4px 15px #0c0c0c; 
+  font-size: 5rem;
+  text-shadow: 0px 4px 10px #000; 
+}
+
+.faz-bem {
+
+  color: #4ABDAC;
+  text-shadow: 0px 4px 10px #000; 
 }
 
