Implementação do html e css do contato

--- a/css/ajuda.css
+++ b/css/ajuda.css
@@ -4,7 +4,8 @@
 
 	background: #DFDCE3;
 	border-top: solid 5px white;
-  
+  border-bottom: solid 5px white;
+
   text-align: center;
 
 	
@@ -14,16 +15,13 @@
 		                                  rgb(205, 202, 209) 16px, 
 		                                  transparent 0px,
 		                                  transparent);
-	background-size: 20px 20px;
-	background-attachment: fixed;
+	background-size: 40px 40px;
+  background-attachment: fixed;
+
 
   
 }
 
-.titulo-botao-ajuda {
-
-  font-size: 35px;
-}
 
 
 .tipo-ajuda {
@@ -33,8 +31,11 @@
   flex-flow: row wrap;
 
   justify-content: space-around;
-  margin-bottom: 100px;
-  
+}
+
+.titulo-botao-ajuda {
+
+  font-size: 35px;
 }
 
 
@@ -43,10 +44,10 @@
   padding: 20px;
   background: #4ABDAC;
   box-shadow: 0 8px rgb(42, 119, 108);
-  margin-top: 10px;
   border-radius: 5px;
   height: 200px;
-  margin-top: 60px
+  margin-top: 150px;
+  margin-bottom: 150px;
 }
 
 .money-img{
@@ -59,7 +60,7 @@
 .food-img {
   content:url(../img/food.svg);
   margin-top: 22px;
-
+  max-width: 153px;
 }
 
 .medicine-img {
