--- a/css/navigation-menu.css
+++ b/css/navigation-menu.css
@@ -68,7 +68,7 @@ nav li:nth-child(2n+1) a:after {
 
   nav a {
     padding: 10px;
-    border-right: 2px dashed #0D47A1;
+    border-right: 2px dashed rgb(42, 119, 108);
     width: 100px;
   }
 
