--- a/css/contato.css
+++ b/css/contato.css
@@ -1,12 +1,14 @@
 
 
 .contato-form {
-  margin-top: 60px;
+  border-top: #fff dashed 4px;
+  padding: 60px;
   text-align: center;
   background: url(../img/contato.jpg) no-repeat fixed center / cover;
 }
 
 .contato-title {
+  
   font-size: 40px;
   margin-bottom: 35px;
   color: black;
