--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,8 @@
 .rodape {
 	
-	border-top: solid 5px #fff;
+	
 	padding: 20px;
-	border-bottom: solid 5px #222222;
+	border-top: #000 dashed 2px;
 	margin-top: 20px;
 	background: #222222;
 	
