--- a/public/css/institution.css
+++ b/public/css/institution.css
@@ -7,8 +7,30 @@ header {
     padding: 80px 0 350px;
 }
 
+.fundo-liso {	
+	
+    background: rgba(66, 66, 66, 0.57);
+    border-top: solid 5px white;
+    border-bottom: solid 5px white;
+
+    text-align: center;
+
+    background-image: linear-gradient(135deg, transparent, 
+                                            transparent 14px, 
+                                        rgb(205, 202, 209) 16px,
+                                            rgb(205, 202, 209) 16px, 
+                                            transparent 0px,
+                                            transparent);
+    background-size: 40px 40px;
+    background-attachment: fixed;
+}
+
 #titulo-tipo-de-ajuda {
     margin: 230px 0 20px;
     font-size: 5rem;
     text-shadow: 0px 5px 5px #000; 
+}
+
+#sobre-instituicao {
+    font-size: 50px;
 }
