--- a/public/css/institution.css
+++ b/public/css/institution.css
@@ -31,6 +31,6 @@ header {
     text-shadow: 0px 5px 5px #000; 
 }
 
-#sobre-instituicao {
-    font-size: 50px;
+.nome-instituicao {
+    font-size: 80px;
 }
