--- a/public/css/institution.css
+++ b/public/css/institution.css
@@ -12,9 +12,7 @@ header {
     background: rgba(66, 66, 66, 0.57);
     border-top: solid 5px white;
     border-bottom: solid 5px white;
-
     text-align: center;
-
     background-image: linear-gradient(135deg, transparent, 
                                             transparent 14px, 
                                         rgb(205, 202, 209) 16px,
@@ -26,11 +24,33 @@ header {
 }
 
 #titulo-tipo-de-ajuda {
+
     margin: 230px 0 20px;
     font-size: 5rem;
     text-shadow: 0px 5px 5px #000; 
 }
 
+.lista-instituicao {
+
+    display: flex;
+    flex-flow: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}   
+
 .nome-instituicao {
-    font-size: 80px;
+
+    border: 2px solid white;
+    background-color: rgba(255, 255, 255, .3);  
+    color: white;
+    margin-top: 20px;
+    font-size: 50px;
+    padding: 25px;
+    border-radius: 50px;    
 }
+
+.nome-instituicao:hover {
+    background-color: rgba(0, 255, 255, .6);
+}
+
+
