--- a/public/css/institution.css
+++ b/public/css/institution.css
@@ -35,7 +35,7 @@ header {
     display: flex;
     flex-flow: column;
     flex-wrap: wrap;
-    justify-content: center;
+
 }   
 
 .nome-instituicao {
@@ -43,7 +43,9 @@ header {
     border: 2px solid white;
     background-color: rgba(255, 255, 255, .3);  
     color: white;
+    width: 50%;
     margin-top: 20px;
+    margin-left: 24%;
     font-size: 50px;
     padding: 25px;
     border-radius: 50px;    
