--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the root controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+    background-image: url(/assets/bg-pattern-gray.jpg);
+}
+
+.chavoso-tab {
+    height: 100%;
+}
+
