--- a/public/css/institution.css
+++ b/public/css/institution.css
@@ -32,6 +32,7 @@ header {
 
 .lista-instituicao {
 
+    margin-top: 200px;
 }   
 
 .nome-instituicao {
@@ -40,7 +41,7 @@ header {
     background-color: rgba(255, 255, 255, .3);  
     color: white;
     width: 50%;
-    margin-top: 20px;
+    margin: 25px;
     margin-left: 24%;
     font-size: 50px;
     padding: 25px;
@@ -48,7 +49,7 @@ header {
 }
 
 .nome-instituicao:hover {
-    background-color: rgba(0, 255, 255, .6);
+    background-color: #F7B733;
 }
 
 
