--- a/public/css/institution.css
+++ b/public/css/institution.css
@@ -11,7 +11,6 @@ header {
 	
     background: rgba(66, 66, 66, 0.57);
     border-top: solid 5px white;
-    border-bottom: solid 5px white;
     text-align: center;
     background-image: linear-gradient(135deg, transparent, 
                                             transparent 14px, 
@@ -72,11 +71,26 @@ header {
     }
 }
 
+.loader-bg {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(200, 200, 200, .2);
+    height: 25vh;
+    background-image: linear-gradient(135deg, transparent, 
+                                            transparent 14px, 
+                                        rgb(205, 202, 209) 16px,
+                                            rgb(205, 202, 209) 16px, 
+                                            transparent 0px,
+                                            transparent);
+    background-size: 40px 40px;
+}
 
 .loader {
-
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
+    
+    border: 16px solid #424242; /* Light grey */
+    border-top: 16px solid #4ABDAC; /* Blue */
     border-radius: 50%;
     width: 120px;
     height: 120px;
