--- a/public/css/institution.css
+++ b/public/css/institution.css
@@ -48,7 +48,9 @@ header {
     padding: 25px;
     border-radius: 50px;    
 }
-
+.tipo-ajuda {
+    color: #4ABDAC;
+}
 @media screen and (max-width: 800px) {
 
     #titulo-tipo-de-ajuda {
