--- a/public/css/institution.css
+++ b/public/css/institution.css
@@ -48,9 +48,11 @@ header {
     padding: 25px;
     border-radius: 50px;    
 }
+
 .tipo-ajuda {
     color: #4ABDAC;
 }
+
 @media screen and (max-width: 800px) {
 
     #titulo-tipo-de-ajuda {
@@ -87,6 +89,25 @@ header {
                                             transparent 0px,
                                             transparent);
     background-size: 40px 40px;
+
+    
+}
+
+
+#title-name {
+
+    margin: 230px 0 20px;
+    font-size: 5rem;
+    text-shadow: 0px 5px 5px #000; 
+}
+
+.container {
+    
+    background: url(../img/gray-cover.png) no-repeat fixed center / cover;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    color: #fff;
+    padding: 80px 0 350px;
 }
 
 .loader {
