--- a/public/css/institution.css
+++ b/public/css/institution.css
@@ -75,27 +75,10 @@
     }
 }
 
-.loader-bg {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(200, 200, 200, .2);
-    height: 25vh;
-    background-image: linear-gradient(135deg, transparent, 
-                                            transparent 14px, 
-                                        rgb(205, 202, 209) 16px,
-                                            rgb(205, 202, 209) 16px, 
-                                            transparent 0px,
-                                            transparent);
-    background-size: 40px 40px;
-
-    
-}
 
 
 #title-name {
-
+    
     margin: 230px 0 20px;
     font-size: 5rem;
     text-shadow: 0px 5px 5px #000; 
@@ -110,13 +93,30 @@
     padding: 80px 0 350px;
 }
 
+.loading {
+    color: #4ABDAC;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 50px;
+    margin-bottom: 80px;
+    text-shadow: 0px 2px 2px #000; 
+}
+
+.loader-bg {
+
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(225, 225, 225, .2);
+    height: 30vh;
+}
 .loader {
     
-    border: 16px solid #424242; /* Light grey */
-    border-top: 16px solid #4ABDAC; /* Blue */
+    border: 10px solid #424242; 
+    border-top: 10px solid #4ABDAC; 
     border-radius: 50%;
-    width: 120px;
-    height: 120px;
+    width: 50px;
+    height: 50px;
     animation: spin 2s linear infinite;
 }
 
