Mudança no esquema de cores das bordas

--- a/public/css/ajuda.css
+++ b/public/css/ajuda.css
@@ -3,7 +3,7 @@
 .fundo-liso {	
 	
 	background: rgba(66, 66, 66, 0.57);
-	border-top: solid 5px white;
+	border-top: solid 5px #4ABDAC;
 
 
   text-align: center;
