--- a/public/css/institution.css
+++ b/public/css/institution.css
@@ -76,32 +76,23 @@
 }
 
 
-
-
-.loading {
-    color: #4ABDAC;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 50px;
-    margin-bottom: 80px;
-    text-shadow: 0px 2px 2px #000; 
-}
-
 .loader-bg {
 
+    border-top: 2px dashed white;
+    border-bottom: 2px dashed white;
     display: flex;
-    flex-flow: column;
     justify-content: center;
     align-items: center;
     background-color: rgba(225, 225, 225, .2);
-    height: 30vh;
+    height: 15vh;
 }
 .loader {
     
     border: 10px solid #424242; 
     border-top: 10px solid #4ABDAC; 
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     animation: spin 2s linear infinite;
 }
 
