--- a/public/css/donation-general.css
+++ b/public/css/donation-general.css
@@ -30,8 +30,8 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 3em;
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }   
 
 #address {
@@ -62,6 +62,27 @@
     width: 50px;
     height: 50px;
     margin-top: 13px;
+}
+
+
+.sobre-instit {
+
+    line-height: normal;
+
+    font-size: 2em;
+    color: white;
+    margin: 40px;
+    text-align: justify;
+    text-justify: inter-word;
+
+}
+
+.sobre-instit::first-letter {
+
+    font-size: 200%;
+    color: #4ABDAC;
+    text-shadow: 0px 5px 5px rgb(63, 63, 63);
+    margin-right: 10px;
 }
 
 @media screen and (max-width: 500px) {
