--- a/public/css/institution.css
+++ b/public/css/institution.css
@@ -32,7 +32,7 @@
 
 .lista-instituicao {
 
-    margin-top: 20px;
+    margin-top: 15px;
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -83,7 +83,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 12%;
+    width: 150px;
 }
 
 .loader-bg {
