--- a/public/css/donation-general.css
+++ b/public/css/donation-general.css
@@ -24,14 +24,19 @@
 }
 
 .send-donation {
-    
+    margin: 0 auto;
     color: white;
     text-shadow: 0px 3px 3px #000;
     font-family: 'Open Sans', sans-serif;
     font-size: 3em;
     text-align: center;
     margin-top: 80px;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
+    background-color: rgba(255,255,255, .4);
+    border: 2px solid white;
+    padding: 40px;
+    width:50%;  
+    border-radius: 50px;
 }   
 
 #address {
@@ -86,10 +91,13 @@
 }
 
 .money-donation {
-
-    margin: 50px;
     
-    border-radius: 10%;
+    border: 2px solid white;
+    background-color: rgba(255, 255, 255, .2);
+    width: 80%;
+    margin: 0 auto;
+    padding: 10px;
+    border-radius: 100px;
 }
 
 .key-value {
@@ -98,7 +106,11 @@
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    
+}
+.money-img {
+    height: 80px;
+    width: 80px;
 }
 
 .key {
@@ -109,8 +121,18 @@
 }
 
 .value {
+    color: white;
+    text-shadow: 0px 4px 4px black;
     margin-left: 15px;
     font-size: 40px;
+}
+
+.money-donation-title {
+    color: white;
+    padding: 15px; 
+    font-size: 50px;
+    border-radius: 40px;
+    text-shadow: 0px 4px 4px black;
 }
 
 
