--- a/public/css/donation-general.css
+++ b/public/css/donation-general.css
@@ -73,7 +73,10 @@
 .sobre-instit {
 
     line-height: normal;
-
+    background-color: rgba(255,255,255, .3);
+    text-shadow: 0px 2px 2px black;
+    padding: 20px;
+    border: 5px dashed white;
     font-size: 2em;
     color: white;
     margin: 40px;
