--- a/public/css/donation-general.css
+++ b/public/css/donation-general.css
@@ -9,7 +9,7 @@
 #title-name {
     
     margin: 230px 0 20px;
-    font-size: 5rem;
+    font-size: 6rem;
     text-shadow: 0px 5px 5px #000; 
 }
 
@@ -64,9 +64,10 @@
 
 
 .btn-img {
+    
     width: 50px;
     height: 50px;
-    margin-top: 13px;
+    margin-top: 15px;
 }
 
 
@@ -94,13 +95,16 @@
 }
 
 .money-donation {
-    
     border: 2px solid white;
     background-color: rgba(255, 255, 255, .2);
     width: 80%;
     margin: 0 auto;
     padding: 10px;
     border-radius: 100px;
+}
+
+.money-title {
+    padding: 10px;
 }
 
 .key-value {
@@ -112,8 +116,8 @@
     
 }
 .money-img {
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    width: 100px;
 }
 
 .key {
